Created stylesheets for articles

--- a/public/sass/elements/_bars.scss
+++ b/public/sass/elements/_bars.scss
@@ -41,4 +41,8 @@
     transform-origin: center right;
     transform: translateX(-50%) rotate(-45deg);
   }
+
+  @media (min-width: 1280px) {
+    display: none;
+  }
 }
