--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -15,5 +15,8 @@ body {
   color: $fontColor;
 }
 
+@import "elements/article-tile";
 @import "elements/bars";
+@import "elements/button";
 @import "elements/nav";
+@import "elements/latest-article";
