Styles and created handle in frontend for register and login forms

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -21,7 +21,7 @@ html
         +navElement('Main', '/', 'fas fa-home')
         +navElement('All users', '/users', 'fas fa-users')
         +navElement('Fractions', '/fractions', 'fas fa-flag')
-      a(href="/" class="sign-in")
+      a(href="/register" class="sign-in")
         span(class="fas fa-user")
         span Sign in
     button(class="bars" id="bars")
