--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -15,6 +15,7 @@ body {
   color: $fontColor;
 }
 
+@import "elements/account-panel";
 @import "elements/article-tile";
 @import "elements/bars";
 @import "elements/button";
