--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -16,6 +16,7 @@ body {
 }
 
 @import "elements/account-panel";
+@import "elements/admin";
 @import "elements/article-tile";
 @import "elements/bars";
 @import "elements/button";
