rendering articles on the main page

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,38 +1,30 @@
 extends layout
 
+mixin articleTile(articleTitle, articleSneakPeak, id)
+  div(class="article-tile")
+    img(src="/images/article640.jpg" class="article-tile__img")
+    div(class="article-tile__content")
+      h2(class="article-tile__title")=articleTitle
+      p(class="article-tile__sneak-peak")=articleSneakPeak
+      a(href=`/article/${id}` class="button article-tile__button") Read more
+
 block content
   main  
     section
-      div(class="articles__latest latest-article")
-        img(src="/images/article640.jpg" class="latest-article__img")
-        div(class="latest-article__content")
-          h2(class="latest-article__title") Lorem ipsum dolor sit amet
-          p(class="latest-article__sneak-peak") Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam odio vitae distinctio numquam ipsum, ipsa repudiandae architecto explicabo cupiditate voluptatem.
-          a(href="/" class="button latest-article__button") Read more
+      if(latesArticle !== false)
+        div(class="articles__latest latest-article")
+          img(src="/images/article640.jpg" class="latest-article__img")
+          div(class="latest-article__content")
+            h2(class="latest-article__title")=latesArticle.title
+            p(class="latest-article__sneak-peak")=latesArticle.sneakPeak
+            a(href=`/article/${latesArticle._id}` class="button latest-article__button") Read more
 
     //secion of articles
     section(class="list-of-articles")
       div(class="articles-container")
-        div(class="article-tile")
-          img(src="/images/article640.jpg" class="article-tile__img")
-          div(class="article-tile__content")
-            h2(class="article-tile__title") Lorem ipsum dolor sit amet
-            p(class="article-tile__sneak-peak") Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam odio vitae distinctio numquam ipsum, ipsa repudiandae architecto explicabo cupiditate voluptatem.
-            a(href="/" class="button article-tile__button") Read more
-        div(class="article-tile")
-          img(src="/images/article640.jpg" class="article-tile__img")
-          div(class="article-tile__content")
-            h2(class="article-tile__title") Lorem ipsum dolor sit amet
-            p(class="article-tile__sneak-peak") Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam odio vitae distinctio numquam ipsum, ipsa repudiandae architecto explicabo cupiditate voluptatem.
-            a(href="/" class="button article-tile__button") Read more
-        div(class="article-tile")
-          img(src="/images/article640.jpg" class="article-tile__img")
-          div(class="article-tile__content")
-            h2(class="article-tile__title") Lorem ipsum dolor sit amet
-            p(class="article-tile__sneak-peak") Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam odio vitae distinctio numquam ipsum, ipsa repudiandae architecto explicabo cupiditate voluptatem.
-            a(href="/" class="button article-tile__button") Read more
-
-
+        if(articles !== false)
+          each article in articles  
+            +articleTile(article.title, article.sneakPeak, article._id)
       
 
   script(src="/javascript/main.js" type="module") 
