--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -18,6 +18,7 @@ body {
 @import "elements/account-panel";
 @import "elements/admin";
 @import "elements/article-tile";
+@import "elements/article";
 @import "elements/bars";
 @import "elements/button";
 @import "elements/nav";
@@ -26,4 +27,10 @@ body {
 
 .error {
   color: red;
+}
+
+input,
+textarea {
+  outline: transparent;
+  font-family: $fontFamily;
 }
