Handle of giving likes for comments

--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -21,6 +21,7 @@ body {
 @import "elements/article";
 @import "elements/bars";
 @import "elements/button";
+@import "elements/comment";
 @import "elements/nav";
 @import "elements/latest-article";
 @import "elements/register";
