--- a/views/accountPanel.pug
+++ b/views/accountPanel.pug
@@ -1,7 +1,7 @@
 extends layout
 
 mixin accountInfoElement(txt, info)
-  p(class="account-panel__txt") #{`${txt}: ${info}`}
+  p(class="account-panel__txt") #{`${txt} ${info}`}
 
 block content
   main(class="account-panel")
