Created page with user list and form to search users on this list

--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -24,6 +24,7 @@ body {
 @import "elements/comment";
 @import "elements/nav";
 @import "elements/latest-article";
+@import "elements/users-list";
 @import "elements/register";
 
 .error {
