--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -22,6 +22,7 @@ body {
 @import "elements/bars";
 @import "elements/button";
 @import "elements/comment";
+@import "elements/fraction-form";
 @import "elements/nav";
 @import "elements/latest-article";
 @import "elements/users-list";
