--- a/public/sass/elements/_account-panel.scss
+++ b/public/sass/elements/_account-panel.scss
@@ -1,8 +1,13 @@
 .account-panel {
   min-height: 100vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  @media (min-width: 1024px) {
+    flex-direction: row;
+  }
 
   &__container {
     display: flex;
