--- a/public/sass/elements/_admin.scss
+++ b/public/sass/elements/_admin.scss
@@ -7,10 +7,20 @@
   align-items: center;
   justify-content: center;
 
+  @media (min-width: 1280px) {
+    flex-direction: row;
+  }
+
   &__article-creater {
+    position: relative;
     width: 90%;
     max-width: 500px;
     margin: 100px 0;
+
+    @media (min-width: 1280px) {
+      width: 60%;
+      margin-left: 100px;
+    }
   }
 
   &__section-title {
@@ -19,6 +29,34 @@
     text-align: center;
     font-size: 2rem;
     font-weight: normal;
+  }
+
+  &__users-header {
+    margin: 60px 0 20px;
+    text-align: center;
+    font-size: 1.6rem;
+
+    @media (min-width: 1280px) {
+      font-size: 2rem;
+    }
+  }
+
+  &__users-list {
+    list-style: none;
+    font-size: 1.4rem;
+  }
+
+  &__user-element {
+    display: flex;
+    margin: 25px 0;
+
+    & p {
+      margin-right: 10px;
+    }
+
+    & a {
+      text-decoration: none;
+    }
   }
 }
 
@@ -74,4 +112,12 @@
     transform: translateX(-50%);
     outline: transparent;
   }
+}
+
+.ban {
+  color: rgb(238, 38, 38);
+}
+
+.unban {
+  color: rgb(40, 167, 28);
 }
